@@ -1,5 +1,0 @@
-[lib_simplecomplex_inspect]
-trace_limit = 5
-truncate = 1000
-output_max = 1048576
-exectime_percent = 90
