@@ -169,7 +169,7 @@ class EnvConfig implements ConfigInterface
      */
     public function __get($name)
     {
-        if ($name == 'name') {
+        if ('' . $name == 'name') {
             return $this->name;
         }
         throw new OutOfBoundsException(get_class($this) . ' instance has no property[' . $name . '].');
@@ -184,7 +184,7 @@ class EnvConfig implements ConfigInterface
      */
     public function __set($name, $value)
     {
-        if ($name == 'name') {
+        if ('' . $name == 'name') {
             throw new RuntimeException(get_class($this) . ' instance property[' . $name . '] is read-only.');
         }
         throw new OutOfBoundsException(get_class($this) . ' instance has no property[' . $name . '].');
